--- a/kafka-2.0.1-src/config/server.properties
+++ b/kafka-2.0.1-src/config/server.properties
@@ -57,7 +57,8 @@ socket.request.max.bytes=104857600
 ############################# Log Basics #############################
 
 # A comma separated list of directories under which to store log files
-log.dirs=/tmp/kafka-logs
+#log.dirs=/tmp/kafka-logs
+log.dirs=E:\\GitRepository\\kafka\u7814\u8BFB\u6E90\u7801\\kafka_source\\kafka-2.0.1-src\\kafka-logs
 
 # The default number of log partitions per topic. More partitions allow greater
 # parallelism for consumption, but this will also result in more files across
