--- a/kafka-2.0.1-src/config/server.properties
+++ b/kafka-2.0.1-src/config/server.properties
@@ -58,7 +58,7 @@ socket.request.max.bytes=104857600
 
 # A comma separated list of directories under which to store log files
 #log.dirs=/tmp/kafka-logs
-log.dirs=..\kafka-logs
+log.dirs=../kafka-logs
 
 # The default number of log partitions per topic. More partitions allow greater
 # parallelism for consumption, but this will also result in more files across
@@ -122,7 +122,8 @@ log.retention.check.interval.ms=300000
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002".
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
-zookeeper.connect=node01:2181,node02:2181,node03:2181
+zookeeper.connect=localhost:2181/haojiawei
+#zookeeper.connect=node01:2181
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=6000
