--- a/kafka-2.0.1-src/build.gradle
+++ b/kafka-2.0.1-src/build.gradle
@@ -544,7 +544,7 @@ project(':core') {
   println "Building project 'core' with Scala version ${versions.scala}"
 
   apply plugin: 'scala'
-  apply plugin: "org.scoverage"
+  apply plugin: 'org.scoverage'
   archivesBaseName = "kafka_${versions.baseScala}"
 
   dependencies {
